always get new versions of snapshots

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
                 <enabled>false</enabled>
             </releases>
             <snapshots>
+                <updatePolicy>always</updatePolicy>
                 <enabled>true</enabled>
             </snapshots>
         </repository>
