--- a/circle.yml
+++ b/circle.yml
@@ -25,4 +25,4 @@ deployment:
   s3:
     branch: master
     commands:
-      - mvn s3-upload:s3-upload -P jenkins
+      - mvn s3-upload:s3-upload -P jenkins -Ds3.accessKey=$S3_ACCESS_KEY -Ds3.secretKey=$S3_SECRET_KEY
