--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,5 +51,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <service android:name="com.mapzen.core.DataUploadService"
+            android:exported="false"
+            android:enabled="true" >
+        </service>
     </application>
 </manifest>
