--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.robolectric</groupId>
             <artifactId>robolectric</artifactId>
-            <version>2.3-SNAPSHOT</version>
+            <version>2.3</version>
             <scope>test</scope>
         </dependency>
 
