--- a/circle.yml
+++ b/circle.yml
@@ -10,10 +10,7 @@ machine:
 dependencies:
   pre:
     - echo y | android update sdk --all --no-ui --force --filter "build-tools-19.0.3,platform-tools,android-18,addon-google_apis-google-18,android-19,extra-android-m2repository"
-    - ./scripts/install-android-jar.sh
-    - ./scripts/install-support-jar.sh
-    - ./scripts/install-vtm.sh
-    - ./scripts/install-vtm-native-libs.sh
+    - ./install-dependencies.sh
 
 test:
   override:
