--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,8 @@ test:
     - mvn install -Dosm_oauth.key=$OSM_AUTH_KEY -Dosm_oauth.secret=$OSM_AUTH_SECRET -P jenkins
 
 deployment:
-  s3:
+  latest:
     branch: master
     commands:
       - mvn s3-upload:s3-upload -P jenkins -Ds3.accessKey=$S3_ACCESS_KEY -Ds3.secretKey=$S3_SECRET_KEY
+      - mvn s3-upload:s3-upload -P s3All -Ds3.accessKey=$S3_ACCESS_KEY -Ds3.secretKey=$S3_SECRET_KEY
