--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
         <osm_oauth.secret>bogus_secret</osm_oauth.secret>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <maven.build.timestamp.format>yyyy-MM-dd_HH-mm-ss</maven.build.timestamp.format>
     </properties>
 
     <scm>
@@ -378,6 +380,34 @@
                             <bucketName>android.mapzen.com</bucketName>
                             <source>target/${project.build.finalName}.apk</source>
                             <destination>latest.apk</destination>
+                            <accessKey>${s3.accessKey}</accessKey>
+                            <secretKey>${s3.secretKey}</secretKey>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>s3-upload</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>s3All</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.bazaarvoice.maven.plugins</groupId>
+                        <artifactId>s3-upload-maven-plugin</artifactId>
+                        <version>1.2</version>
+                        <configuration>
+                            <bucketName>android.mapzen.com</bucketName>
+                            <source>target/${project.build.finalName}.apk</source>
+                            <destination>${project.build.finalName}-${timestamp}.apk</destination>
                             <accessKey>${s3.accessKey}</accessKey>
                             <secretKey>${s3.secretKey}</secretKey>
                         </configuration>
