adds routing in the navigation bar and the ability to exit routing in the notification bar

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,5 +50,7 @@
             android:exported="false"
             android:enabled="true" >
         </service>
+    <receiver android:name="com.mapzen.util.NotificationBroadcastReciever" >
+    </receiver>
     </application>
 </manifest>
