opens browser to authentication page on sign in click

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,10 +42,18 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.InitActivity">
+        <activity
+                android:name=".activity.InitActivity"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+                <category android:name="android.intent.category.BROWSABLE"></category>
+                <data android:scheme="mapzen" android:host="oauth-login"></data>
             </intent-filter>
         </activity>
         <service android:name="com.mapzen.core.DataUploadService"
