fixes bug with two instances after oauth in browser

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,7 @@
         </activity>
         <activity
                 android:name=".activity.InitActivity"
+                android:launchMode="singleTask"
                 android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
