--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>org.robolectric</groupId>
             <artifactId>robolectric</artifactId>
-            <version>2.3</version>
+            <version>2.4-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
