--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,7 +50,6 @@
             android:exported="false"
             android:enabled="true" >
         </service>
-    <receiver android:name="com.mapzen.util.NotificationBroadcastReciever" >
-    </receiver>
+    <receiver android:name="com.mapzen.util.NotificationBroadcastReciever" />
     </application>
 </manifest>
