Add explicit generate-sources goal execution in circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,8 @@ dependencies:
 
 test:
   override:
-    - mvn install -Dosm_oauth.key=$OSM_AUTH_KEY -Dosm_oauth.secret=$OSM_AUTH_SECRET -P jenkins
+    - mvn generate-sources -Dosm_oauth.key=$OSM_AUTH_KEY -Dosm_oauth.secret=$OSM_AUTH_SECRET
+    - mvn install -P jenkins -Dosm_oauth.key=$OSM_AUTH_KEY -Dosm_oauth.secret=$OSM_AUTH_SECRET
 
 deployment:
   latest:
