--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,19 @@
             <version>2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sothree.slidinguppanel</groupId>
+            <artifactId>library</artifactId>
+            <version>1.0.1</version>
+            <type>aar</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.nineoldandroids</groupId>
+            <artifactId>library</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -249,7 +262,7 @@
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
-                    <version>3.8.2</version>
+                    <version>3.9.0-rc.2</version>
                     <extensions>true</extensions>
                 </plugin>
 
