Lint is broken in latest version of tools. Disabling until fixed.
https://code.google.com/p/android/issues/detail?id=72596

--- a/pom.xml
+++ b/pom.xml
@@ -273,7 +273,7 @@
                         <platform>19</platform>
                     </sdk>
                     <lint>
-                        <skip>false</skip>
+                        <skip>true</skip>
                         <failOnError>true</failOnError>
                         <warningsAsErrors>true</warningsAsErrors>
                     </lint>
