--- a/project.properties
+++ b/project.properties
@@ -1,2 +1,2 @@
-# For the use of Robolectric
-android.library.reference.1=target/unpacked-libs/css_library
+#For the use of Robolectric
+android.library.reference.1=gen-external-apklibs/com.sothree.slidinguppanel_library_1.0.1
