--- a/project.properties
+++ b/project.properties
@@ -1,2 +1,3 @@
 # For the use of Robolectric
 android.library.reference.1=target/unpacked-libs/css_library
+android.library.reference.1=gen-external-apklibs/com.sothree.slidinguppanel_library_1.0.1
