create new init activity to avoid flash

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,19 +44,24 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".activity.InitActivity"
+                android:name=".activity.LoginActivity"
                 android:launchMode="singleTask"
                 android:theme="@style/Theme.Mapzen.NoActionBar"
                 android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="mapzen" android:host="oauth-login" />
+            </intent-filter>
+        </activity>
+        <activity
+                android:name=".activity.InitialActivity"
+                android:launchMode="singleTask"
+                android:theme="@android:style/Theme.NoDisplay">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
