--- a/secrets.xml.example
+++ b/secrets.xml.example
@@ -3,5 +3,6 @@
     <!-- Provide dummy values and substitute real values at compile time. -->
     <string name="osm_key">REPLACE_KEY</string>
     <string name="osm_secret">REPLACE_SECRET</string>
+    <string name="mixpanel_token">REPLACE_MIXPANEL_TOKEN</string>
 </resources>
 
