--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>com.mapzen.android</groupId>
             <artifactId>pelias-android-sdk</artifactId>
-            <version>0.1</version>
+            <version>0.3-SNAPSHOT</version>
         </dependency>
 
         <dependency>
