--- a/pom.xml
+++ b/pom.xml
@@ -455,6 +455,34 @@
         </profile>
 
         <profile>
+            <id>all</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.bazaarvoice.maven.plugins</groupId>
+                        <artifactId>s3-upload-maven-plugin</artifactId>
+                        <version>1.2</version>
+                        <configuration>
+                            <bucketName>android.mapzen.com</bucketName>
+                            <source>target/${project.build.finalName}.apk</source>
+                            <destination>${branchName}${project.build.finalName}-${timestamp}.apk</destination>
+                            <accessKey>${s3.accessKey}</accessKey>
+                            <secretKey>${s3.secretKey}</secretKey>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>s3-upload</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
             <id>s3All</id>
             <build>
                 <plugins>
