--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,7 @@ test:
 
 deployment:
   all:
-    branch: /.*/
+    branch: /^(?!master).*$/
     commands:
       - mvn s3-upload:s3-upload -P all -DbranchName=$CIRCLE_BRANCH -Ds3.accessKey=$S3_ACCESS_KEY -Ds3.secretKey=$S3_SECRET_KEY
   latest:
