Skip artifact deployment during deploy phase (uses s3-upload instead).
Prevents the following error when executing `mvn deploy` or `mvn release:perform`:

[ERROR] Failed to execute goal org.apache.maven.plugins:maven-deploy-plugin:2.8.2:deploy (default-deploy) on project mapzen: Deployment failed: repository element was not specified in the POM inside distributionManagement element or in -DaltDeploymentRepository=id::layout::url parameter -> [Help 1]

--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,14 @@
                         <argLine>-noverify -Xms512m -Xmx1024m -XX:MaxPermSize=256m</argLine>
                     </configuration>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
 
