--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mapzen.android</groupId>
-    <artifactId>mapzen</artifactId>
+    <artifactId>open</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>apk</packaging>
 
-    <name>Mapzen</name>
+    <name>Open</name>
 
     <repositories>
         <repository>
