add build-tools 20

--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ machine:
 
 dependencies:
   pre:
-    - echo y | android update sdk --all --no-ui --force --filter "build-tools-19.0.3,platform-tools,android-19"
+    - echo y | android update sdk --all --no-ui --force --filter "build-tools-19.0.3,build-tools-20.0.0,platform-tools,android-19"
     - sed -i /gen-external/d project.properties
     - sed -i s/reference.2/reference.1/g project.properties
     - ./install-dependencies.sh
