--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
     - sed -i s/reference.2/reference.1/g project.properties
     - ./install-dependencies.sh
     - sudo apt-get update; sudo apt-get install s3cmd 
-    - echo "[default]\naccess_key = $S3_ACCESS_KEY\n secret_key = $S3_SECRET_KEY" > ~/.s3cfg
+    - printf "[default]\naccess_key = $S3_ACCESS_KEY\n secret_key = $S3_SECRET_KEY" > ~/.s3cfg
     - git clone https://github.com/mapzen/apk-s3-lister.git; cd apk-s3-lister; ./upload.sh 
 
 test:
