Haha Circle, not sure why you need both but let's try this <3

--- a/project.properties
+++ b/project.properties
@@ -1,3 +1,5 @@
 # For the use of Robolectric
-android.library.reference.1=gen-external-apklibs/com.sothree.slidinguppanel_library_1.0.1
-android.library.reference.2=gen-external-apklibs/com.mcxiaoke.viewpagerindicator_library_2.4.1
+android.library.reference.1=target/unpacked-libs/css_library
+android.library.reference.2=gen-external-apklibs/com.sothree.slidinguppanel_library_1.0.1
+android.library.reference.3=target/unpacked-libs/cmv_library
+android.library.reference.4=gen-external-apklibs/com.mcxiaoke.viewpagerindicator_library_2.4.1
