--- a/circle.yml
+++ b/circle.yml
@@ -25,9 +25,9 @@ deployment:
   all:
     branch: /^(?!master).*$/
     commands:
-      - mvn s3-upload:s3-upload -P all -DbranchName=$CIRCLE_BRANCH -Ds3.accessKey=$S3_ACCESS_KEY -Ds3.secretKey=$S3_SECRET_KEY
+      - s3cmd put target/*.apk s3://android.mapzen.com/development/$CIRCLE_BRANCH-$CIRCLE_BUILD_NUM.apk
   latest:
     branch: master
     commands:
-      - mvn s3-upload:s3-upload -P jenkins -Ds3.accessKey=$S3_ACCESS_KEY -Ds3.secretKey=$S3_SECRET_KEY
-      - mvn s3-upload:s3-upload -P s3All -Ds3.accessKey=$S3_ACCESS_KEY -Ds3.secretKey=$S3_SECRET_KEY
+      - s3cmd put target/*.apk s3://android.mapzen.com/latest.apk 
+      - s3cmd put target/*.apk s3://android.mapzen.com/snapshots/master-$CIRCLE_BUILD_NUM.apk
