--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ dependencies:
     - echo y | android update sdk --all --no-ui --force --filter "build-tools-20.0.0,platform-tools,android-19"
     - sed -i /gen-external/d project.properties
     - sed -i s/reference.2/reference.1/g project.properties
-    - ./install-dependencies.sh
+    - scripts/install-dependencies.sh
     - sudo apt-get update; sudo apt-get install s3cmd 
     - printf "[default]\naccess_key = $S3_ACCESS_KEY\n secret_key = $S3_SECRET_KEY" > ~/.s3cfg
     - git clone https://github.com/mapzen/apk-s3-lister.git; cd apk-s3-lister; ./upload.sh 
