adding a salt method

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,30 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mapzen.android</groupId>
+            <artifactId>leyndo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <classifier>armeabi</classifier>
+            <type>so</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mapzen.android</groupId>
+            <artifactId>leyndo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <classifier>armeabi-v7a</classifier>
+            <type>so</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mapzen.android</groupId>
+            <artifactId>leyndo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <classifier>x86</classifier>
+            <type>so</type>
+        </dependency>
+
+        <dependency>
             <groupId>com.mapzen</groupId>
             <artifactId>on-the-road</artifactId>
             <version>0.4-SNAPSHOT</version>
