--- a/pom.xml
+++ b/pom.xml
@@ -464,12 +464,31 @@
                         <artifactId>android-maven-plugin</artifactId>
                         <configuration>
                             <manifestVersionName>${project.version}</manifestVersionName>
+                            <release>true</release>
+                            <sign>
+                                <debug>false</debug>
+                            </sign>
+                            <manifest>
+                                <debuggable>false</debuggable>
+                                <versionCodeAutoIncrement>true</versionCodeAutoIncrement>
+                            </manifest>
+                            <proguard>
+                                <skip>true</skip>
+                            </proguard>
                         </configuration>
                         <executions>
                             <execution>
+                                <id>manifestUpdate</id>
                                 <phase>process-resources</phase>
                                 <goals>
                                     <goal>manifest-update</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>alignApk</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>zipalign</goal>
                                 </goals>
                             </execution>
                         </executions>
@@ -489,7 +508,7 @@
                                 <inherited>true</inherited>
                                 <configuration>
                                     <removeExistingSignatures>true</removeExistingSignatures>
-                                    <archiveDirectory/>
+                                    <archiveDirectory />
                                     <includes>
                                         <include>${project.build.directory}/${project.artifactId}.apk</include>
                                     </includes>
@@ -522,6 +541,32 @@
                             </arguments>
                         </configuration>
                     </plugin>
+
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>zipalign</id>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <phase>install</phase>
+                                <configuration>
+                                    <executable>${env.ANDROID_HOME}/build-tools/20.0.0/zipalign</executable>
+                                    <arguments>
+                                        <argument>-f</argument>
+                                        <argument>-v</argument>
+                                        <argument>4</argument>
+                                        <argument>target/${project.build.finalName}.apk</argument>
+                                        <argument>target/${project.build.finalName}-signed-aligned.apk</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
                 </plugins>
             </build>
         </profile>
