--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mapzen.android</groupId>
     <artifactId>open</artifactId>
-    <version>0.6.0-SNAPSHOT</version>
+    <version>0.6.0</version>
     <packaging>apk</packaging>
 
     <name>Open</name>
@@ -52,7 +50,7 @@
         <url>http://github.com/mapzen/android</url>
         <connection>scm:git:git://github.com/mapzen/android.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/mapzen/android.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>open-0.6.0</tag>
     </scm>
 
     <dependencies>
