Adds upload-release.sh to deploy release APK

--- a/circle.yml
+++ b/circle.yml
@@ -32,7 +32,4 @@ deployment:
   release:
     branch: master
     commands:
-      ->
-        if [ -n "${PERFORM_RELEASE}" ]; then
-          s3cmd put target/*.apk s3://android.mapzen.com/releases/
-        fi
+      - scripts/upload-release.sh
