--- a/circle.yml
+++ b/circle.yml
@@ -24,12 +24,9 @@ deployment:
     branch: /^(?!master).*$/
     commands:
       - s3cmd put target/*.apk s3://android.mapzen.com/development/$CIRCLE_BRANCH-$CIRCLE_BUILD_NUM.apk
-  latest:
+  master:
     branch: master
     commands:
       - s3cmd put target/*.apk s3://android.mapzen.com/latest.apk 
       - s3cmd put target/*.apk s3://android.mapzen.com/snapshots/master-$CIRCLE_BUILD_NUM.apk
-  release:
-    branch: master
-    commands:
       - scripts/upload-release.sh
