--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mapzen.open"
-    android:versionCode="7"
-    android:versionName="0.6.1-DEVELOPMENT"
+    android:versionCode="0"
+    android:versionName="DEVELOPMENT"
     android:installLocation="preferExternal">
 
     <uses-sdk
