--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.mapzen.android</groupId>
     <artifactId>open</artifactId>
-    <version>0.6.12-SNAPSHOT</version>
+    <version>0.7.0</version>
     <packaging>apk</packaging>
 
     <name>Open</name>
@@ -50,7 +50,7 @@
         <url>http://github.com/mapzen/android</url>
         <connection>scm:git:git://github.com/mapzen/android.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/mapzen/android.git</developerConnection>
-        <tag>open-0.6.0</tag>
+        <tag>open-0.7.0</tag>
     </scm>
 
     <dependencies>
