--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
         <url>http://github.com/mapzen/android</url>
         <connection>scm:git:git://github.com/mapzen/android.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/mapzen/android.git</developerConnection>
-        <tag>open-0.6.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
