Fix recursive naming reference

--- a/pom.xml
+++ b/pom.xml
@@ -453,7 +453,7 @@
         <profile>
             <id>release</id>
             <build>
-                <finalName>${project.build.finalName}-unsigned.apk</finalName>
+                <finalName>${artifactId}-${version}-unsigned.apk</finalName>
                 <plugins>
                     <plugin>
                         <groupId>com.jayway.maven.plugins.android.generation2</groupId>
@@ -491,8 +491,8 @@
                                 <argument>-f</argument>
                                 <argument>-v</argument>
                                 <argument>4</argument>
-                                <argument>target/${project.build.finalName}-unsigned.apk</argument>
-                                <argument>target/${project.build.finalName}.apk</argument>
+                                <argument>target/${artifactId}-${version}-unsigned.apk</argument>
+                                <argument>target/${artifactId}-${version}.apk</argument>
                             </arguments>
                         </configuration>
                     </plugin>
