On the road is now AAR (with API changes)

--- a/project.properties
+++ b/project.properties
@@ -1,3 +1,4 @@
 # For the use of Robolectric
 android.library.reference.1=target/unpacked-libs/css_library
 android.library.reference.2=target/unpacked-libs/cmv_library
+android.library.reference.3=target/unpacked-libs/cm_on-the-road
