--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,8 @@
         <dependency>
             <groupId>com.mapzen</groupId>
             <artifactId>on-the-road</artifactId>
-            <version>0.4-SNAPSHOT</version>
+            <version>0.5-SNAPSHOT</version>
+            <type>aar</type>
         </dependency>
 
         <dependency>
