--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
         <dependency>
             <groupId>com.mapzen.android</groupId>
             <artifactId>pelias-android-sdk</artifactId>
-            <version>0.4-SNAPSHOT</version>
+            <version>0.3.1</version>
         </dependency>
 
         <dependency>
@@ -197,7 +197,7 @@
         <dependency>
             <groupId>com.mapzen.android</groupId>
             <artifactId>speakerbox</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.1.0</version>
         </dependency>
 
         <dependency>
@@ -229,7 +229,7 @@
         <dependency>
             <groupId>com.mapzen.android</groupId>
             <artifactId>lost</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>0.2</version>
         </dependency>
 
         <dependency>
