--- a/pom.xml
+++ b/pom.xml
@@ -82,10 +82,22 @@
         </dependency>
 
         <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-assert-core</artifactId>
+            <version>2.0M10</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.squareup</groupId>
             <artifactId>fest-android</artifactId>
             <version>1.0.7</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-reflect</artifactId>
+            <version>1.4.1</version>
         </dependency>
 
         <dependency>
