--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
         <dependency>
             <groupId>com.mapzen</groupId>
             <artifactId>on-the-road</artifactId>
-            <version>0.5</version>
+            <version>0.6-SNAPSHOT</version>
             <type>aar</type>
         </dependency>
 
