--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,7 @@
         <dependency>
             <groupId>com.mapzen.android</groupId>
             <artifactId>lost</artifactId>
-            <version>0.3-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
